[gd_scene load_steps=3 format=3 uid="uid://baxsig0ds3i82"]

[ext_resource type="Script" uid="uid://d1eisx4olfqf0" path="res://scripts/game scenes/settings.gd" id="1_ommfl"]
[ext_resource type="Theme" uid="uid://bvcwux0exg1y0" path="res://main_theme.tres" id="2_4ndl6"]

[node name="SettingsScreen" type="Control" groups=["UnpausableUserInterfaces"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ommfl")

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color(0.758192, 0.758192, 0.758192, 1)

[node name="PanelContainer" type="PanelContainer" parent="CanvasModulate"]
offset_left = 157.0
offset_top = 139.0
offset_right = 991.0
offset_bottom = 504.0

[node name="MarginContainer" type="MarginContainer" parent="CanvasModulate/PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasModulate/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="VolumeLabel" type="Label" parent="CanvasModulate/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_4ndl6")
theme_override_constants/line_spacing = 0
text = "Game  volume"

[node name="Volume" type="HSlider" parent="CanvasModulate/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_4ndl6")
value = 50.0

[node name="MuteLabel" type="Label" parent="CanvasModulate/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_4ndl6")
text = "Mute   all audio"

[node name="Mute" type="CheckBox" parent="CanvasModulate/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 0
theme_override_constants/h_separation = 0
theme_override_constants/icon_max_width = 0
theme_override_constants/align_to_largest_stylebox = 0
theme_override_constants/line_spacing = 0
theme_override_constants/check_v_offset = 0

[node name="ResolutionLabel" type="Label" parent="CanvasModulate/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_4ndl6")
text = "Resolution   options:"

[node name="Resolution" type="OptionButton" parent="CanvasModulate/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_4ndl6")
item_count = 6
popup/item_0/text = "2560x1440"
popup/item_0/id = 4
popup/item_1/text = "1920x1080"
popup/item_1/id = 0
popup/item_2/text = "1600x900"
popup/item_2/id = 1
popup/item_3/text = "1440x900"
popup/item_3/id = 3
popup/item_4/text = "1280x720"
popup/item_4/id = 2
popup/item_5/text = "1152x648"
popup/item_5/id = 5

[node name="Input" type="Button" parent="CanvasModulate/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("2_4ndl6")
text = "input  settings  menu"

[node name="Back" type="Button" parent="CanvasModulate/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme = ExtResource("2_4ndl6")
text = "Go back"

[connection signal="value_changed" from="CanvasModulate/PanelContainer/MarginContainer/VBoxContainer/Volume" to="." method="_on_volume_value_changed"]
[connection signal="toggled" from="CanvasModulate/PanelContainer/MarginContainer/VBoxContainer/Mute" to="." method="_on_mute_toggled"]
[connection signal="item_selected" from="CanvasModulate/PanelContainer/MarginContainer/VBoxContainer/Resolution" to="." method="_on_resolutions_item_selected"]
[connection signal="pressed" from="CanvasModulate/PanelContainer/MarginContainer/VBoxContainer/Input" to="." method="_on_input_pressed"]
[connection signal="pressed" from="CanvasModulate/PanelContainer/MarginContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
